<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:menuCategory="container">
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:showAsAction="collapseActionView|always"
            tools:ignore="MissingConstraints" />
        <item android:id="@+id/favorite"
            android:title="@string/favorite"
            android:icon = "@drawable/ic_baseline_favorite_24"
            app:showAsAction="always" />
        <item android:id="@+id/settings"
            android:title="@string/setting" />
    </group>

</menu>